--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">AbdulAzim Shaikh</a>.
+    Coded by <a href="https://www.linkedin.com/in/abdulazim-shaikh-b72a80118/">AbdulAzim Shaikh</a>.
   </div>
 </body>
 
